--- a/ManningApp/packages.config
+++ b/ManningApp/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="4.1.10715.0" targetFramework="net35" />
+  <package id="EntityFramework" version="5.0.0" targetFramework="net35" />
+  <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net35" />
   <package id="System.Data.SQLite" version="1.0.108.0" targetFramework="net35" />
   <package id="System.Data.SQLite.Core" version="1.0.108.0" targetFramework="net35" />
   <package id="System.Data.SQLite.Linq" version="1.0.108.0" targetFramework="net35" />
